--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,7 +7,8 @@
     position: relative;
     background:#165150;
     width: 100%;
-    height: 400px;
+    min-height: 400px;
+    height: auto;
     overflow: hidden;
     box-shadow: 0 0 40px 0 #e1e1e1;
 }
@@ -237,7 +238,8 @@
     2.Start Register.html css
 ------------------------------*/
 .logina-area .register-from {
-    height: 1000px;
+    min-height: 1000px;
+    height:auto;
 }
 
 /*----------------------------
@@ -248,7 +250,8 @@
     3.Start payment.html css
 ------------------------------*/
 .logina-area .payment-form {
-    height: 530px;
+    min-height: 530px;
+    height:auto;
 }
 
 /*----------------------------
@@ -259,7 +262,8 @@
     4.Start reset.html css
 ------------------------------*/
 .logina-area .reset-form {
-    height: 450px;
+    min-height: 450px;
+    height:auto;
 }
 
 /*----------------------------
@@ -270,7 +274,8 @@
     5.Start review.html css
 ------------------------------*/
 .logina-area .review-form {
-    height: 635px;
+    min-height: 635px;
+    height:auto;
 }
 
 .logina-area .form-area .rating-area h6 {
@@ -344,7 +349,9 @@
     6.Start  contact.html css
 ------------------------------*/
 .logina-area .contact-form {
-    height: 800px;
+    min-height: 800px;
+    height:auto;
+    background-color: #fff;
 }
 
 /*---------------------------
@@ -355,7 +362,8 @@
     7.Start  recover.html css
 ------------------------------*/
 .logina-area .recover-from {
-    height: 300px;
+    min-height: 300px;
+    height:auto;
 }
 
 /*---------------------------
@@ -366,7 +374,8 @@
     8.Start  checkout.html css
 ------------------------------*/
 .logina-area .checkout-form {
-    height: 757px;
+    min-height: 757px;
+    height:auto;
 }
 
 .logina-area .checkout-form .form-input select {
@@ -390,7 +399,8 @@
     9.Start  search.html css
 ------------------------------*/
 .logina-area .search-from {
-    height: 290px;
+    min-height: 290px;
+    height:auto;
 }
 
 /*---------------------------
@@ -423,7 +433,8 @@
     }
 
     .logina-area .checkout-form {
-        height: 793px;
+        min-height: 793px;
+        height: auto;
     }
 }
 
@@ -441,24 +452,29 @@
 
     .logina-area .form-area .form-input {
         width: 100%;
-        height: 370px;
+        min-height: 370px;
+        height: auto;
     }
 
     .logina-area .form-area .form-content {
         width: 100%;
-        height: 310px;
+        min-height: 310px;
+        height: auto;
     }
 
     .logina-area .payment-form .form-input {
-        height: 530px;
+        min-height: 530px;
+        height: auto;
     }
 
     .logina-area .register-from .form-input {
-        height: 750px;
+        min-height: 750px;
+        height: auto;
     }
 
     .logina-area .review-form .form-input {
-        height: 655px;
+        min-height: 655px;
+        height: auto;
     }
 
     .logina-area .form-area .rating.star .rating-wrapper > label {
@@ -467,35 +483,43 @@
     }
 
     .logina-area .contact-form .form-input {
-        height: 595px;
+        min-height: 595px;
+        height: auto;
     }
 
     .logina-area .checkout-form .form-input {
-        height: 1053px;
+        min-height: 1053px;
+        height: auto;
     }
 
     .logina-area .payment-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .register-from .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .review-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .reset-form .form-input {
-        height: 450px;
+        min-height: 450px;
+        height: auto;
     }
 
     .logina-area .contact-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .checkout-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 }
 
@@ -523,7 +547,8 @@
 
     .logina-area .form-area .form-content {
         width: 100%;
-        height: 310px;
+        min-height: 310px;
+        height:auto;
     }
 
     .logina-area .form-area .form-content ul {
@@ -532,35 +557,43 @@
 
     .logina-area .form-area .form-input {
         width: 100%;
-        height: 409px;
+        min-height: 409px;
+        height: auto;
     }
 
     .logina-area .payment-form .form-input {
-        height: 570px;
+        min-height: 570px;
+        height: auto;
     }
 
     .logina-area .payment-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .register-from .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .register-from .form-input {
-        height: 772px;
+        min-height: 772px;
+        height: auto;
     }
 
     .logina-area .reset-form .form-input {
-        height: 450px;
+        min-height: 450px;
+        height: auto;
     }
 
     .logina-area .review-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .review-form .form-input {
-        height: 619px;
+        min-height: 619px;
+        height: auto;
     }
 
     .logina-area .form-area .rating.star .rating-wrapper > label {
@@ -569,19 +602,23 @@
     }
 
     .logina-area .contact-form .form-input {
-        height: 592px;
+        min-height: 592px;
+        height: auto;
     }
 
     .logina-area .contact-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 
     .logina-area .checkout-form .form-input {
-        height: 1092px;
+        min-height: 1092px;
+        height: auto;
     }
 
     .logina-area .checkout-form .form-content {
-        height: 340px;
+        min-height: 340px;
+        height: auto;
     }
 }
 
